gcc-defaults (1.88) UNRELEASED; urgency=low

  [ Matthias Klose ]
  * libgcj-common: Don't use absolute paths in debhelper autoscripts.
    Closes: #511491.

  [ Aurelien Jarno ]
  * Enable ada on kfreebsd-amd64.

 -- Matthias Klose <doko@debian.org>  Fri, 10 Jul 2009 08:03:15 +0200

gcc-defaults (1.87) unstable; urgency=low

  * gcj-jre-headless/gcj-jdk: Depend on gij-4.3/gcj-4.3. Closes: #532292.

 -- Matthias Klose <doko@debian.org>  Thu, 11 Jun 2009 18:31:42 -0400

gcc-defaults (1.86) unstable; urgency=low

  * Reupload, last upload rejected due to wrong encoding in changelog.

 -- Matthias Klose <doko@debian.org>  Wed, 20 May 2009 15:02:31 +0200

gcc-defaults (1.85) unstable; urgency=low

  * Move library files for aot-compile into a private directory.

 -- Matthias Klose <doko@debian.org>  Tue, 19 May 2009 04:48:34 +0200

gcc-defaults (1.84) unstable; urgency=low

  * Make GCC-4.4 the default for java packages on hppa.
  * Build packages gcj-{jre-headless,jre,jdk}, mark gij and gcj as
    transitional packages.
  * Let gcj-{jre-headless,jre,jdk} depend on the java-gcj-compat packages
    on architectures where gij/gcj-4.3 is the default.
  * gcj-jdk: Conflict with classpath-common (<= 2:0.97.2-1.1), common
    binary gappletviewer and man page.
  * Change section names of java packages.
  * Handle wrong /usr/share/doc/libgcj-common symlink left over from
    gcj-4.1. Closes: #396583.
  * Update Debian README. Closes: #498950.

 -- Matthias Klose <doko@debian.org>  Sun, 18 May 2009 22:12:18 +0200

gcc-defaults (1.83) unstable; urgency=low

  * Build gij/gcj packages for hppa.

 -- Matthias Klose <doko@debian.org>  Mon, 04 May 2009 01:52:17 +0200

gcc-defaults (1.81) unstable; urgency=low

  * Enable java on hurd-i386 (Samuel Thibault). Closes: #525083.

 -- Matthias Klose <doko@debian.org>  Thu, 23 Apr 2009 08:42:48 +0200

gcc-defaults (1.80) unstable; urgency=low

  * Fix required version on alpha.
