@@ -266,7 +266,7 @@ Description: Documentation for the GNU Pascal compiler (gpc)
  Documentation for the GNU Pascal compiler in info format (dependency package).
 
 Package: gnat
-Architecture: alpha amd64 hppa i386 ia64 lpia mips mipsel powerpc ppc64 s390 sparc kfreebsd-amd64 kfreebsd-i386
+Architecture: alpha amd64 armel hppa i386 ia64 lpia mips mipsel powerpc ppc64 s390 sparc kfreebsd-amd64 kfreebsd-i386
 Priority: optional
 Depends: gnat-${pv:gnat} ${reqv:gnat}
 Conflicts: gnat-3.3, gnat-3.4, gnat-4.0, gnat-4.1 (<< 4.1.1-6)
@@ -276,7 +276,7 @@ Description: The GNU Ada compiler
  in their Build-Depends line.
 
 Package: libgnatvsn-dev
-Architecture: alpha amd64 hppa i386 ia64 lpia mips mipsel powerpc ppc64 s390 sparc kfreebsd-amd64 kfreebsd-i386
+Architecture: alpha amd64 armel hppa i386 ia64 lpia mips mipsel powerpc ppc64 s390 sparc kfreebsd-amd64 kfreebsd-i386
 Section: libdevel
 Priority: optional
 Depends: gnat (>= ${version:gnat}), libgnatvsn${pv:gnat}-dev ${reqv:gnat}
@@ -288,7 +288,7 @@ Description: GNU Ada compiler version library - development files
  This package contains the development files and static library.
 
 Package: libgnatprj-dev
-Architecture: alpha amd64 hppa i386 ia64 lpia mips mipsel powerpc ppc64 s390 sparc kfreebsd-amd64 kfreebsd-i386
+Architecture: alpha amd64 armel hppa i386 ia64 lpia mips mipsel powerpc ppc64 s390 sparc kfreebsd-amd64 kfreebsd-i386
 Section: libdevel
 Priority: optional
 Depends: gnat (>= ${version:gnat}), libgnatprj${pv:gnat}-dev ${reqv:gnat}
